
@startuml MVA_MGM_Architecture

class "Model"  << (M,#FF7700) >> {
}

class "Mediators (adapters, controllers)" << (C,#FF7700) >> {
    model reference
    dom reference
    notify()
}

class "GUI (View, DOM)" << (V,#FF7700) >> {
    buttons
    text inputs
    checkbox inputs
}

class App {
    model reference
}

"Mediators (adapters, controllers)" --> "GUI (View, DOM)" : set DOM
"GUI (View, DOM)" ..> "Mediators (adapters, controllers)" : GUI events
"GUI (View, DOM)" ..> App : GUI events
Model ..> "Mediators (adapters, controllers)" : setter events (notify)
App --> Model : set model
@enduml

